Fixed links again...

--- a/android/index.html
+++ b/android/index.html
@@ -5,10 +5,10 @@
         </link>
     </head>
     <body>
-        <a href="/apk/LeafPic.apk">
+        <a href="apk/LeafPic.apk">
             LeafPic.apk
         </a>
-        <a href="/apk/LuckyPatcher.apk">
+        <a href="apk/LuckyPatcher.apk">
             LuckyPatcher.apk
         </a>
     </body>
